--- a/tabela.html
+++ b/tabela.html
@@ -12,9 +12,12 @@
 </head>
 
 <body>
+<p>Esse e a pagina Principal</p>
     <a href="./tabela2.html">tabela2</a>
     <br>
     <a href="./tabela3.html">tabela3</a>
+    <br>
+    <a href="./formulario.html">Entrar no formulario</a>
     <table>
 
         <tr>
