--- a/formulario.html
+++ b/formulario.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <a href="./tabela.html">Voltar a tela Principal</a>
+    <a href="./index.html">Voltar</a>
 
     <form action="" method="post" enctype="multipart/from-date"> <br>
         <fieldset>
