--- a/tabela2.html
+++ b/tabela2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +9,9 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./tabela.html">
 </head>
+
 <body>
-    <a href="./tabela.html">Tabela</a>
+    <a href="./index.html">Voltar</a>
     <table>
         <thead>
             <tr>
@@ -34,6 +36,7 @@
             </tr>
         </tfoot>
     </table>
-    
+
 </body>
+
 </html>
