--- a/tabela3.html
+++ b/tabela3.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <a href="./tabela.html">Tabela Principal</a>
+    <a href="./index.html">Voltar</a>
     <p>Meus Quadrados</p>
     <br>
     <table>
